# myturn

./: .gitignore  LICENSE  README.md
hook-tests/: bridge-hook.test.js
hooks/: myturn-bridge.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bridge.rs  color_rules.rs  config.rs  icon.rs  lib.rs  main.rs  watcher.rs
