[package]
name = "myturn"
version = "0.1.0"
description = "MyTurn — context window usage tracker for Claude"
authors = []
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "myturn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log        = "0.4"
dirs       = "5"
notify     = "6"
tauri                   = { version = "2.11.2", features = ["tray-icon", "image-png"] }
tauri-plugin-log        = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart  = "2"

[dev-dependencies]
tempfile = "3"
